# ViolaTasks

./: .gitignore  README.md  esercizio_tecnico.docx
Viola Analytics — Fiorentina Design System/: .thumbnail  SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  readme.md  styles.css
Viola Analytics — Fiorentina Design System/assets/: esempio_fiorentina_2024-26.csv
Viola Analytics — Fiorentina Design System/components/core/: Badge.d.ts  Badge.jsx  Badge.prompt.md  Button.d.ts  Button.jsx  Button.prompt.md  Card.d.ts  Card.jsx  Card.prompt.md  (+4 more)
Viola Analytics — Fiorentina Design System/guidelines/: brand-crest.html  brand-lockup.html  colors-events-status.html  colors-giglio-accent.html  colors-neutrals.html  colors-pitch.html  colors-viola.html  elevation.html  radii.html  spacing-scale.html  type-body.html  type-data-mono.html  type-display.html  type-scale.html
Viola Analytics — Fiorentina Design System/tokens/: colors.css  elevation.css  fonts.css  spacing.css  typography.css
consegna_pipeline/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run.ps1  run.py  run.sh
consegna_pipeline/.github/workflows/: ci.yml
consegna_pipeline/.streamlit/: config.toml
consegna_pipeline/charts/: charts.py
consegna_pipeline/docs/: valutazione_formati.md
consegna_pipeline/src/: __init__.py  config.py  extract.py  gold.py  load.py  pipeline.py  queries.py  transform.py  validation.py  verify.py
consegna_pipeline/static/: Viola-Analytics-Dashboard.html
consegna_pipeline/tests/: test_pipeline.py  test_validation.py  test_verify_gold.py
(+35 files in other folders)
